native/include/bluez_media_native.h

typedef struct BluezMediaPlayerRegistration {
  const char* adapter_path;
  const char* player_path;
  const char* name;
  const char* type;
  const char* subtype;
  uint8_t browsable;
  uint8_t searchable;
} BluezMediaPlayerRegistration;
typedef int32_t BluezMediaOperation;
typedef struct BluezMediaBuffer {
  uint8_t* data;
  int32_t length;
} BluezMediaBuffer;
BLUEZ_MEDIA_EXPORT void bluez_media_init(void* dart_api_dl_data);
/* Creates a client with cover-art session ownership disabled. */
BLUEZ_MEDIA_EXPORT void* bluez_media_client_create(int64_t events_port);
/* Creates a client with cover-art session ownership disabled. */
BLUEZ_MEDIA_EXPORT void bluez_media_client_create_async(int64_t events_port,
                                                        int64_t result_port);
BLUEZ_MEDIA_EXPORT void bluez_media_client_destroy(void* handle);
// Releases data returned through any BluezMediaBuffer and resets its fields.
BLUEZ_MEDIA_EXPORT void bluez_media_buffer_free(BluezMediaBuffer* buffer);
BLUEZ_MEDIA_EXPORT void bluez_media_call_async(void* handle,
                                               BluezMediaOperation operation,
                                               const char* object_path,
                                               const char* argument,
                                               int32_t value,
                                               int64_t result_port);
// ── org.bluez.Media1 registration ──────────────────────────────────────────

BLUEZ_MEDIA_EXPORT int bluez_media_register_player(
    void* handle,
    const BluezMediaPlayerRegistration* registration);
BLUEZ_MEDIA_EXPORT void bluez_media_register_player_async(
    void* handle,
    const BluezMediaPlayerRegistration* registration,
    int64_t result_port);
BLUEZ_MEDIA_EXPORT int bluez_media_unregister_player(void* handle,
                                                     const char* adapter_path,
                                                     const char* player_path);
// ── org.bluez.MediaPlayer1 remote controls ─────────────────────────────────

BLUEZ_MEDIA_EXPORT int bluez_media_player_play(void* handle,
                                               const char* player_path);
BLUEZ_MEDIA_EXPORT int bluez_media_player_pause(void* handle,
                                                const char* player_path);
BLUEZ_MEDIA_EXPORT int bluez_media_player_stop(void* handle,
                                               const char* player_path);
BLUEZ_MEDIA_EXPORT int bluez_media_player_next(void* handle,
                                               const char* player_path);
BLUEZ_MEDIA_EXPORT int bluez_media_player_previous(void* handle,
                                                   const char* player_path);
BLUEZ_MEDIA_EXPORT int bluez_media_player_fast_forward(void* handle,
                                                       const char* player_path);
BLUEZ_MEDIA_EXPORT int bluez_media_player_rewind(void* handle,
                                                 const char* player_path);
BLUEZ_MEDIA_EXPORT int bluez_media_player_set_repeat(void* handle,
                                                     const char* player_path,
                                                     const char* repeat);
BLUEZ_MEDIA_EXPORT int bluez_media_player_set_shuffle(void* handle,
                                                      const char* player_path,
                                                      const char* shuffle);