lib/bluez_media_native_bindings_generated.dart

// ignore_for_file: always_specify_types
// ignore_for_file: camel_case_types
// ignore_for_file: non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// Bindings for `native/include/bluez_media_native.h`.
///
/// Regenerate bindings with `dart run ffigen --config ffigen.yaml`.
///
class BluezMediaNativeBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  BluezMediaNativeBindings(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  BluezMediaNativeBindings.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  /// ── Client lifecycle ────────────────────────────────────────────────────────
  void bluez_media_init(ffi.Pointer<ffi.Void> dart_api_dl_data) {
    return _bluez_media_init(dart_api_dl_data);
  }

  late final _bluez_media_initPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
        'bluez_media_init',
      );
  late final _bluez_media_init = _bluez_media_initPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Void> bluez_media_client_create(int events_port) {
    return _bluez_media_client_create(events_port);
  }

  late final _bluez_media_client_createPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Void> Function(ffi.Int64)>>(
        'bluez_media_client_create',
      );
  late final _bluez_media_client_create = _bluez_media_client_createPtr
      .asFunction<ffi.Pointer<ffi.Void> Function(int)>();

  void bluez_media_client_create_async(int events_port, int result_port) {
    return _bluez_media_client_create_async(events_port, result_port);
  }

  late final _bluez_media_client_create_asyncPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Int64)>>(
        'bluez_media_client_create_async',
      );
  late final _bluez_media_client_create_async =
      _bluez_media_client_create_asyncPtr.asFunction<void Function(int, int)>();

  void bluez_media_client_destroy(ffi.Pointer<ffi.Void> handle) {
    return _bluez_media_client_destroy(handle);
  }

  late final _bluez_media_client_destroyPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
        'bluez_media_client_destroy',
      );
  late final _bluez_media_client_destroy = _bluez_media_client_destroyPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  /// Releases data returned through any BluezMediaBuffer and resets its fields.
  void bluez_media_buffer_free(ffi.Pointer<BluezMediaBuffer> buffer) {
    return _bluez_media_buffer_free(buffer);
  }

  late final _bluez_media_buffer_freePtr =
      _lookup<
        ffi.NativeFunction<ffi.Void Function(ffi.Pointer<BluezMediaBuffer>)>
      >('bluez_media_buffer_free');
  late final _bluez_media_buffer_free = _bluez_media_buffer_freePtr
      .asFunction<void Function(ffi.Pointer<BluezMediaBuffer>)>();

  void bluez_media_call_async(
    ffi.Pointer<ffi.Void> handle,
    int operation,
    ffi.Pointer<ffi.Char> object_path,
    ffi.Pointer<ffi.Char> argument,
    int value,
    int result_port,
  ) {
    return _bluez_media_call_async(
      handle,
      operation,
      object_path,
      argument,
      value,
      result_port,
    );
  }

  late final _bluez_media_call_asyncPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Pointer<ffi.Void>,
            BluezMediaOperation,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Int32,
            ffi.Int64,
          )
        >
      >('bluez_media_call_async');
  late final _bluez_media_call_async = _bluez_media_call_asyncPtr
      .asFunction<
        void Function(
          ffi.Pointer<ffi.Void>,
          int,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          int,
          int,
        )
      >();

  /// ── org.bluez.Media1 registration ──────────────────────────────────────────
  int bluez_media_register_player(
    ffi.Pointer<ffi.Void> handle,
    ffi.Pointer<BluezMediaPlayerRegistration> registration,
  ) {
    return _bluez_media_register_player(handle, registration);
  }

  late final _bluez_media_register_playerPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Void>,
            ffi.Pointer<BluezMediaPlayerRegistration>,
          )
        >
      >('bluez_media_register_player');
  late final _bluez_media_register_player = _bluez_media_register_playerPtr
      .asFunction<
        int Function(
          ffi.Pointer<ffi.Void>,
          ffi.Pointer<BluezMediaPlayerRegistration>,
        )
      >();

  void bluez_media_register_player_async(
    ffi.Pointer<ffi.Void> handle,
    ffi.Pointer<BluezMediaPlayerRegistration> registration,
    int result_port,
  ) {
    return _bluez_media_register_player_async(
      handle,
      registration,
      result_port,
    );
  }

  late final _bluez_media_register_player_asyncPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Pointer<ffi.Void>,
            ffi.Pointer<BluezMediaPlayerRegistration>,
            ffi.Int64,
          )
        >
      >('bluez_media_register_player_async');
  late final _bluez_media_register_player_async =
      _bluez_media_register_player_asyncPtr
          .asFunction<
            void Function(
              ffi.Pointer<ffi.Void>,
              ffi.Pointer<BluezMediaPlayerRegistration>,
              int,
            )
          >();

  int bluez_media_unregister_player(
    ffi.Pointer<ffi.Void> handle,
    ffi.Pointer<ffi.Char> adapter_path,
    ffi.Pointer<ffi.Char> player_path,
  ) {
    return _bluez_media_unregister_player(handle, adapter_path, player_path);
  }

  late final _bluez_media_unregister_playerPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Void>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('bluez_media_unregister_player');
  late final _bluez_media_unregister_player = _bluez_media_unregister_playerPtr
      .asFunction<
        int Function(
          ffi.Pointer<ffi.Void>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  /// ── org.bluez.MediaPlayer1 remote controls ─────────────────────────────────
  int bluez_media_player_play(
    ffi.Pointer<ffi.Void> handle,
    ffi.Pointer<ffi.Char> player_path,
  ) {
    return _bluez_media_player_play(handle, player_path);
  }

  late final _bluez_media_player_playPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)
        >
      >('bluez_media_player_play');
  late final _bluez_media_player_play = _bluez_media_player_playPtr
      .asFunction<int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)>();

  int bluez_media_player_pause(
    ffi.Pointer<ffi.Void> handle,
    ffi.Pointer<ffi.Char> player_path,
  ) {
    return _bluez_media_player_pause(handle, player_path);
  }

  late final _bluez_media_player_pausePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)
        >
      >('bluez_media_player_pause');
  late final _bluez_media_player_pause = _bluez_media_player_pausePtr
      .asFunction<int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)>();

  int bluez_media_player_stop(
    ffi.Pointer<ffi.Void> handle,
    ffi.Pointer<ffi.Char> player_path,
  ) {
    return _bluez_media_player_stop(handle, player_path);
  }

  late final _bluez_media_player_stopPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)
        >
      >('bluez_media_player_stop');
  late final _bluez_media_player_stop = _bluez_media_player_stopPtr
      .asFunction<int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)>();

  int bluez_media_player_next(
    ffi.Pointer<ffi.Void> handle,
    ffi.Pointer<ffi.Char> player_path,
  ) {
    return _bluez_media_player_next(handle, player_path);
  }

  late final _bluez_media_player_nextPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)
        >
      >('bluez_media_player_next');
  late final _bluez_media_player_next = _bluez_media_player_nextPtr
      .asFunction<int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)>();

  int bluez_media_player_previous(
    ffi.Pointer<ffi.Void> handle,
    ffi.Pointer<ffi.Char> player_path,
  ) {
    return _bluez_media_player_previous(handle, player_path);
  }

  late final _bluez_media_player_previousPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)
        >
      >('bluez_media_player_previous');
  late final _bluez_media_player_previous = _bluez_media_player_previousPtr
      .asFunction<int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)>();

  int bluez_media_player_fast_forward(
    ffi.Pointer<ffi.Void> handle,
    ffi.Pointer<ffi.Char> player_path,
  ) {
    return _bluez_media_player_fast_forward(handle, player_path);
  }

  late final _bluez_media_player_fast_forwardPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)
        >
      >('bluez_media_player_fast_forward');
  late final _bluez_media_player_fast_forward =
      _bluez_media_player_fast_forwardPtr
          .asFunction<
            int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)
          >();

  int bluez_media_player_rewind(
    ffi.Pointer<ffi.Void> handle,
    ffi.Pointer<ffi.Char> player_path,
  ) {
    return _bluez_media_player_rewind(handle, player_path);
  }

  late final _bluez_media_player_rewindPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)
        >
      >('bluez_media_player_rewind');
  late final _bluez_media_player_rewind = _bluez_media_player_rewindPtr
      .asFunction<int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)>();

  int bluez_media_player_set_repeat(
    ffi.Pointer<ffi.Void> handle,
    ffi.Pointer<ffi.Char> player_path,
    ffi.Pointer<ffi.Char> repeat,
  ) {
    return _bluez_media_player_set_repeat(handle, player_path, repeat);
  }

  late final _bluez_media_player_set_repeatPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Void>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('bluez_media_player_set_repeat');
  late final _bluez_media_player_set_repeat = _bluez_media_player_set_repeatPtr
      .asFunction<
        int Function(
          ffi.Pointer<ffi.Void>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  int bluez_media_player_set_shuffle(
    ffi.Pointer<ffi.Void> handle,
    ffi.Pointer<ffi.Char> player_path,
    ffi.Pointer<ffi.Char> shuffle,
  ) {
    return _bluez_media_player_set_shuffle(handle, player_path, shuffle);
  }
